--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,18 @@
 #bind-key F7 previous-window
 #bind-key F9 next-window
 #bind-key F8 switch-client -l
+bind-key M-f select-pane -t :.+
+bind-key M-o select-pane -t :.+
+#bind-key M-f select-pane -l
+bind-key h select-pane -L
+bind-key M-h select-pane -L
+bind-key j select-pane -D
+bind-key M-j select-pane -D
+bind-key k select-pane -U
+bind-key M-k select-pane -U
+bind-key l select-pane -R
+bind-key M-l select-pane -R
+bind-key q display-panes -d 0
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 
@@ -14,7 +26,7 @@ bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user
 set -s escape-time 0
 
 ##session option
-set -g prefix M-j
+set -g prefix M-f
 #set -g default-shell /bin/zsh
 set -g buffer-limit 10000
 #set -g terminal-overrides 'xterm*:smcup@:rmcup@'
