update prefix and setting up default shell in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,3 @@
-
-
 ##bind keys##
 #defbuffer=~/.my_systemwide_buffer
 #bind-key y save-buffer ~/.my_systemwide_buffer
@@ -27,11 +25,11 @@ set -s escape-time 0
 
 ##session option
 set -g prefix M-f
-#set -g default-shell /bin/zsh
 set -g buffer-limit 10000
 #set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g default-terminal "screen-256color"
 set -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-shell ${SHELL}
 #set -g status-left "#{pane_current_path}"
 
 ##display window name as working dir
@@ -61,4 +59,3 @@ set -g @resurrect-capture-pane-contents 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
