--- a/tmux.conf
+++ b/tmux.conf
@@ -18,18 +18,22 @@ bind-key l select-pane -R
 bind-key M-l select-pane -R
 bind-key q display-panes -d 0
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+# bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'\; send-keys -X clear-selection
 
 ##server option
 set -s escape-time 0
+set -s set-clipboard on
 
 ##session option
 set -g prefix M-f
-set -g buffer-limit 10000
+set -g history-limit 500000
+set -g mouse on
 #set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g default-terminal "screen-256color"
-set -g default-command "reattach-to-user-namespace -l zsh"
-#set-option -g default-shell ${SHELL}
+set-option -as terminal-overrides ",xterm-256color:Tc"
+#set -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-shell ${SHELL}
 #set -g status-left "#{pane_current_path}"
 
 ##display window name as working dir
@@ -44,6 +48,7 @@ set -g status-interval 1
 #set -g message-fg black
 
 ##window option
+
 set-window-option -g mode-keys vi
 set-window-option -g monitor-activity on
 
@@ -59,3 +64,4 @@ set -g @resurrect-capture-pane-contents 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
