update configs on server

--- a/tmux_on_server.conf
+++ b/tmux_on_server.conf
@@ -18,8 +18,9 @@ bind-key l select-pane -R
 bind-key M-l select-pane -R
 bind-key q display-panes -d 0
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-#bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace xclip -i'
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'nc localhost 8377'\; send-keys -X clear-selection
+# bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace xclip -i'
+# bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'reattach-to-user-namespace xclip -i'\; send-keys -X clear-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection \; send-keys -X clear-selection
 
 ##server option
 set -s escape-time 0
@@ -28,27 +29,22 @@ set -s set-clipboard on
 ##session option
 set -g prefix M-f
 set -g history-limit 500000
-set -g mouse on
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g mouse off
 set -g default-terminal "screen-256color"
 set-option -as terminal-overrides ",xterm-256color:Tc"
-#set -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g default-shell ${SHELL}
-#set -g status-left "#{pane_current_path}"
+set-option -g allow-rename off
 
-##display window name as working dir
-set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
-set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
-set -g status-interval 1
+set -g pane-border-style fg=colour238
+set -g pane-active-border-style bg=colour236,fg=colour240
 
-#set -g status-bg white
-#set -g status-fg black
-#set-window-option -g window-status-current-bg yellow
-#set -g message-bg white
-#set -g message-fg black
+set -g window-status-format '#I:#W#F'
+set -g window-status-current-format '#I:#W#F'
+
+set -g status-style bg=colour235,fg=colour243
+set -g message-style bg=colour235,fg=colour243
 
 ##window option
-
 set-window-option -g mode-keys vi
 set-window-option -g monitor-activity on
 
@@ -62,5 +58,7 @@ set -g @resurrect-strategy-vim 'session'
 # for panes
 set -g @resurrect-capture-pane-contents 'on'
 
+# set -g @yank_selection 'primary' # or 'secondary' or 'clipboard'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
