--- a/tmux.conf
+++ b/tmux.conf
@@ -19,8 +19,7 @@ bind-key M-l select-pane -R
 bind-key q display-panes -d 0
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 # bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-# bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'\; send-keys -X clear-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-selection \; send-keys -X clear-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'\; send-keys -X clear-selection
 
 ##server option
 set -s escape-time 0
@@ -30,12 +29,9 @@ set -s set-clipboard on
 set -g prefix M-f
 set -g history-limit 500000
 set -g mouse off
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -g default-terminal "screen-256color"
 set-option -as terminal-overrides ",xterm-256color:Tc"
-#set -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g default-shell ${SHELL}
-#set -g status-left "#{pane_current_path}"
 set-option -g allow-rename off
 
 set -g pane-border-style fg=colour238
@@ -47,31 +43,17 @@ set -g window-status-current-format '#I:#W#F'
 set -g status-style bg=colour235,fg=colour243
 set -g message-style bg=colour235,fg=colour243
 
-##display window name as working dir
-#set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
-#set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
-#set -g status-interval 1
-
-#set -g status-bg white
-#set -g status-fg black
-#set-window-option -g window-status-current-bg yellow
-#set -g message-bg white
-#set -g message-fg black
-
 ##window option
-
 set-window-option -g mode-keys vi
 set-window-option -g monitor-activity on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 
 ##tmux-resurrect
 # for vim
 set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-strategy-nvim 'session'
 # for panes
 set -g @resurrect-capture-pane-contents 'on'
 
